added changes in profile page

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -4,11 +4,12 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  
+
   <title>
-Profile  </title>
+    Profile </title>
   <!--     Fonts and icons     -->
-  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700" />
+  <link rel="stylesheet" type="text/css"
+    href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900|Roboto+Slab:400,700" />
   <!-- Nucleo Icons -->
   <link href="../assets/css/nucleo-icons.css" rel="stylesheet" />
   <link href="../assets/css/nucleo-svg.css" rel="stylesheet" />
@@ -24,10 +25,11 @@ Profile  </title>
 </head>
 
 <body class="g-sidenav-show bg-gray-200">
-  
+
   <div class="main-content position-relative max-height-vh-100 h-100">
     <!-- Navbar -->
-    <nav class="navbar navbar-main navbar-expand-lg px-0 mx-4 shadow-none border-radius-xl" id="navbarBlur" data-scroll="true">
+    <nav class="navbar navbar-main navbar-expand-lg px-0 mx-4 shadow-none border-radius-xl" id="navbarBlur"
+      data-scroll="true">
       <div class="container-fluid py-1 px-3">
         <nav aria-label="breadcrumb">
           <ol class="breadcrumb bg-transparent mb-0 pb-0 pt-1 px-0 me-sm-6 me-5">
@@ -38,18 +40,18 @@ Profile  </title>
         </nav>
         <div class="collapse navbar-collapse mt-sm-0 mt-2 me-md-0 me-sm-4" id="navbar">
           <div class="ms-md-auto pe-md-3 d-flex align-items-center">
-           
+
           </div>
           <ul class="navbar-nav  justify-content-end">
-              <ul class="dropdown-menu  dropdown-menu-end  px-2 py-3 me-sm-n4" aria-labelledby="dropdownMenuButton">
-                <li class="mb-2">
-                  <a class="dropdown-item border-radius-md" href="javascript:;">
-                    <div class="d-flex py-1">
-                    </div>
-                  </a>
-                </li>
-            
-              </ul>
+            <ul class="dropdown-menu  dropdown-menu-end  px-2 py-3 me-sm-n4" aria-labelledby="dropdownMenuButton">
+              <li class="mb-2">
+                <a class="dropdown-item border-radius-md" href="javascript:;">
+                  <div class="d-flex py-1">
+                  </div>
+                </a>
+              </li>
+
+            </ul>
             </li>
             <li class="nav-item d-flex align-items-center">
               <a href="../pages/sign-in.html" class="nav-link text-body font-weight-bold px-0">
@@ -63,7 +65,8 @@ Profile  </title>
     </nav>
     <!-- End Navbar -->
     <div class="container-fluid px-2 px-md-4">
-      <div class="page-header min-height-300 border-radius-xl mt-4" style="background-image: url('https://images.unsplash.com/photo-1531512073830-ba890ca4eba2?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1920&q=80');">
+      <div class="page-header min-height-300 border-radius-xl mt-4"
+        style="background-image: url('https://images.unsplash.com/photo-1531512073830-ba890ca4eba2?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1920&q=80');">
         <span class="mask  bg-gradient-primary  opacity-6"></span>
       </div>
       <div class="card card-body mx-3 mx-md-4 mt-n6">
@@ -76,40 +79,44 @@ Profile  </title>
           <div class="col-auto my-auto">
             <div class="h-100">
               <h5 class="mb-1">
-                <%= user.name %></h5>
-              
+                <%= user.name %>
+              </h5>
+
             </div>
           </div>
-         
+
         </div>
         <div class="row">
           <div class="row">
             <div class="col-12 col-xl-4">
               <div class="card card-plain h-100">
-                
+
                 <div class="card-body p-3">
                   <h6 class="text-uppercase text-body text-xs font-weight-bolder">Account</h6>
                   <ul class="list-group">
                     <li class="list-group-item border-0 px-0">
                       <div class="form-check form-switch ps-0">
                         <input class="form-check-input ms-auto" type="checkbox" id="flexSwitchCheckDefault" checked>
-                        <label class="form-check-label text-body ms-3 text-truncate w-80 mb-0" for="flexSwitchCheckDefault">Email me when someone follows me</label>
+                        <label class="form-check-label text-body ms-3 text-truncate w-80 mb-0"
+                          for="flexSwitchCheckDefault">Email me when someone follows me</label>
                       </div>
                     </li>
                     <li class="list-group-item border-0 px-0">
                       <div class="form-check form-switch ps-0">
                         <input class="form-check-input ms-auto" type="checkbox" id="flexSwitchCheckDefault1">
-                        <label class="form-check-label text-body ms-3 text-truncate w-80 mb-0" for="flexSwitchCheckDefault1">Email me when someone answers on my post</label>
+                        <label class="form-check-label text-body ms-3 text-truncate w-80 mb-0"
+                          for="flexSwitchCheckDefault1">Email me when someone answers on my post</label>
                       </div>
                     </li>
                     <li class="list-group-item border-0 px-0">
                       <div class="form-check form-switch ps-0">
                         <input class="form-check-input ms-auto" type="checkbox" id="flexSwitchCheckDefault2" checked>
-                        <label class="form-check-label text-body ms-3 text-truncate w-80 mb-0" for="flexSwitchCheckDefault2">Email me when someone mentions me</label>
+                        <label class="form-check-label text-body ms-3 text-truncate w-80 mb-0"
+                          for="flexSwitchCheckDefault2">Email me when someone mentions me</label>
                       </div>
                     </li>
                   </ul>
-                 
+
                 </div>
               </div>
             </div>
@@ -117,14 +124,16 @@ Profile  </title>
               <div class="card card-plain h-100">
                 <div class="card-header pb-0 p-3">
                   <div class="row">
-                    
-                   
+
+
                   </div>
                 </div>
                 <div class="card-body p-3">
                   <hr class="horizontal gray-light my-4">
                   <ul class="list-group">
-                    <li class="list-group-item border-0 ps-0 text-sm"><strong class="text-dark">Email:</strong> &nbsp;  <%= user.email %></li>                    
+                    <li class="list-group-item border-0 ps-0 text-sm"><strong class="text-dark">Email:</strong> &nbsp;
+                      <%= user.email %>
+                    </li>
                   </ul>
                 </div>
               </div>
@@ -134,42 +143,38 @@ Profile  </title>
                 <h6 class="mb-1">Your Events</h6>
               </div>
               <div class="row">
-                <% bookedEvents.forEach(event => { %>
-
-
-                <div class="col-xl-3 col-md-6 mb-xl-0 mb-4">
-
-                  <div class="card card-blog card-plain">
-
-                    <div class="card-header p-0 mt-n4 mx-3">
-                      <a class="d-block shadow-xl border-radius-xl">
-                        <img src="<%= event.imagePath %>" alt="img-blur-shadow" class="img-fluid shadow border-radius-xl">
-                      </a>
-                    </div>
-                    <div class="card-body p-3">
-                      <a href="javascript:;">
-                        <h5>
-                          <%= event.textbox4 %>
-                        </h5>
-                      </a>
-                      <p class="mb-4 text-sm">
-                        <%= event.textbox5 %>                      </p>
-                      <div class="d-flex align-items-center justify-content-between">
-                        <button type="button" class="btn btn-outline-primary btn-sm mb-0" id="verification">View verification</button>
+                <% bookings.forEach(function(booking, index) { %>
+                  <div class="col-xl-3 col-md-6 mb-xl-0 mb-4">
+                    <div class="card card-blog card-plain">
+                      <div class="card-header p-0 mt-n4 mx-3">
+                        <a class="d-block shadow-xl border-radius-xl">
+                          <img src="<%= booking.qrCodeUrl %>" alt="img-blur-shadow" class="img-fluid shadow border-radius-xl">
+                        </a>
                       </div>
-                      <div id="popup" class="popup">
-                        <div class="popup-content">
-                          <span class="close">&times;</span>
-                          <img src="<%= event.imagePath %>" alt="Sample Image">
+                      <div class="card-body p-3">
+                        <a href="javascript:;">
+                          <h5>
+                          </h5>
+                        </a>
+                        <p class="mb-4 text-sm">
+                          <%= booking.eventDetails.textbox4 %>
+                        </p>
+                        <div class="d-flex align-items-center justify-content-between">
+                          <button type="button" class="btn btn-outline-primary btn-sm mb-0 verification-btn" id="verification-<%= booking.bookingId %>">View verification</button>
+                        </div>
+                        <!-- Dynamically Generated Modal for Each Booking -->
+                        <div id="verificationModal-<%= booking.bookingId %>" class="modal-profile">
+                          <div class="modal-content-profile">
+                            <h4>Verification</h4>
+                            <img src="<%= booking.qrCodeUrl %>" alt="sample image">
+                            <button id="closeModal-<%= booking.bookingId %>" class="btn">Close</button>
+                          </div>
                         </div>
                       </div>
                     </div>
-
                   </div>
-
-
-                </div>
                 <% }); %>
+                
 
 
               </div>
@@ -184,7 +189,8 @@ Profile  </title>
         <div class="row align-items-center justify-content-lg-between">
           <div class="col-lg-6 mb-lg-0 mb-4">
             <div class="copyright text-center text-sm text-muted text-lg-start">
-              © <script>
+              ©
+              <script>
                 document.write(new Date().getFullYear())
               </script>,
               made with <i class="fa fa-heart"></i> by
@@ -192,7 +198,7 @@ Profile  </title>
               for a better web.
             </div>
           </div>
-        
+
         </div>
       </div>
     </footer>
@@ -211,34 +217,64 @@ Profile  </title>
       Scrollbar.init(document.querySelector('#sidenav-scrollbar'), options);
     }
     // Get the popup element
-var popup = document.getElementById("popup");
-
-// Get the close button element
-var closeButton = document.getElementsByClassName("close")[0];
-
-// Show the popup when the button is clicked
-document.getElementById("verification").onclick = function() {
-  popup.style.display = "block";
-}
-
-// Close the popup when the close button is clicked
-closeButton.onclick = function() {
-  popup.style.display = "none";
-}
-
-// Close the popup when clicking outside of it
-window.onclick = function(event) {
-  if (event.target == popup) {
-    popup.style.display = "none";
-  }
-}
 
   </script>
+
+
+
+
+
+
   <!-- Github buttons -->
   <script async defer src="https://buttons.github.io/buttons.js"></script>
   <!-- Control Center for Material Dashboard: parallax effects, scripts for the example pages etc -->
   <script src="../assets/js/material-dashboard.min.js?v=3.1.0"></script>
+<!-- Your existing HTML code -->
+
+
+
+<script>
+document.addEventListener('DOMContentLoaded', (event) => {
+  function showVerificationModal(bookingId) {
+    const modalId = 'verificationModal-' + bookingId;
+    console.log(modalId)
+    const modalElement = document.getElementById(modalId);
+    console.log(modalElement)
+
+    if (modalElement) {
+      modalElement.classList.toggle('show');
+    }
+  }
+
+  document.querySelectorAll('.verification-btn').forEach(button => {
+    button.addEventListener('click', () => {
+      const bookingId = button.id.split('-')[1];
+      showVerificationModal(bookingId);
+    });
+  });
+
+  function closeModal(bookingId) {
+    const modalId = 'verificationModal-' + bookingId;
+    const modalElement = document.getElementById(modalId);
+    if (modalElement) {
+      modalElement.classList.toggle('show');
+    }
+  }
+
+  document.querySelectorAll('.btn').forEach(closeButton => {
+    closeButton.addEventListener('click', () => {
+      const bookingId = closeButton.id.split('-')[1];
+      closeModal(bookingId);
+    });
+  });
+});
+
+</script>
+
+
+
+  
+  
 </body>
 
 </html>
-
